fix: heading section spacing increasee

--- a/src/index.css
+++ b/src/index.css
@@ -86,7 +86,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 1rem;
+    padding: 1.5rem;
 }
 
 .circle::after {
